syntax = "proto3";

package chat;

message Chat{
  string name = 1;
  string msg = 2;
}

message ChatRet {
    int32 code = 1;
}

message ChatMsg{
    string name = 1;
    string msg = 2;
    int32 time = 3;
}